fix overflow-y on filetree

--- a/client/assets/styles/scss/components/filetree.scss
+++ b/client/assets/styles/scss/components/filetree.scss
@@ -79,6 +79,7 @@
 
 .file-tree {
   border-bottom: 1px solid rgba(0,0,0,.1);
+  max-height: calc(100vh - 126px);
   white-space: nowrap;
 
   li {
